# BossSFX.gd
extends Node

# ุฑุจุท ุนูุฏ ุงูุตูุช (ูุฌุจ ุฃู ุชุชุทุงุจู ูุน ุงูุฃุณูุงุก ูู ูุดูุฏ BossSFX.tscn)
@onready var walk_sound = $WalkSound
@onready var axe_swing_sound = $AxeSwingSound
@onready var hit_received_sound = $HitReceivedSound
@onready var death_sound = $DeathSound

# ------------------------------------
# ุฏูุงู ุชุดุบูู ุงูุฃุตูุงุช
# ------------------------------------

func play_walk():
	# ๐ ูุชูุฑุงุฑ ุงูุตูุช (ูุจุฏู ูุงูุนููุง)ุ ูุถูู ุฃูู ุบูุฑ ููุฏ ุงูุชุดุบูู ุซู ูุจุฏุฃ. 
	# ุงูุฃูู: ูุฌุจ ุฃู ูููู ููู ุงูุตูุช (Stream) ููุณู ูุถุจูุทุงู ุนูู ุฎุงุตูุฉ "Loop" ูู ุงููุญุฑุฑ.
	if walk_sound and not walk_sound.is_playing():
		walk_sound.play()
		
func stop_walk():
	if walk_sound:
		walk_sound.stop()

func play_axe_swing():
	# ุตูุช ุงูุถุฑุจ ุจุงููุฃุณ/ุงููุฌูู
	if axe_swing_sound: axe_swing_sound.play()

func play_hit_received():
	# ุตูุช ุชููู ุงูุถุฑุฑ/ุงูุฅุตุงุจุฉ
	if hit_received_sound: hit_received_sound.play()

func play_death():
	# ุตูุช ููุช ุงูุจูุณ
	if death_sound: death_sound.play()
